Fix overflow from slick slider arrows

--- a/css/instagram.css
+++ b/css/instagram.css
@@ -41,3 +41,7 @@
     letter-spacing: .025em;
   }
 }
+
+.slick-arrow {
+  display: none !important;
+}
